# TCD

./: LICENSE  README.md
Year1/: Readme.md
Year1/CS1010/: HarnessRecords.java  README.md
Year1/CS1010/ChuckLuck/: Chuck.java  Client.java  Dice.java
Year1/CS1010/ClimbingClub/: ClimbingMain.java  Harness.java  HarnessRecords.java
Year1/CS1010/Connect4/: Connect4Game.java  Connect4Grid.java  Connect4Grid2DArray.java  ConnectPlayer.java
Year1/CS1010/LewisCarroll/: _project.xml
Year1/CS1010/etest4/: Inventory.java  Item.java  Order.java
Year1/CS1013/: Constants.pde
Year1/CS1021-1022/: README.md
Year1/CS1025/: README.md
Year1/CS1026/: Readme.md
Year1/CS2021-CS2022/: Anagram.s  Closure.s  Readme.md
Year2/: Readme.md
Year2/CS2010/: DoublyLinkedList.java  DoublyLinkedListTest.java  README.md
Year2/CS2013/: README.MD
Year2/CS2014/: assignment1.c  vim-tip.txt
Year2/CS2016/: lab2.c
Year2/CS2021/: App.s  readme.md  readme.md.txt
Year2/CS2022/: decoder_tb.vhd  file_reg.vhd  mux_2_16_tb.vhd  pro1_tb.vhd  readme.md  reg.vhd  register_tb.vhd
Year2/CS2031/: Client.java  Controller.java  Node.java  PacketContent.java  Router.java  StringContent.java  readme.md
Year2/CS2041/: Readme.md  all_hours.xq  appealDatabase.xml  donationDatabase.xml  donorDatabase.xml  employeeDatabase.xml  memberArea.xml  memberDatabase.xml  volunteerArea.dtd  volunteerArea.xml  volunteerDatabase.dtd  volunteerDatabase.xml  volunteer_database.dtd  vounteer_residence.xq
Year3/: Readme.md
Year3/CS3011/: Readme.md  lab1.pl  lab2.pl
Year3/CS3014/: readme.md
Year3/CS3016/Assignment1/: Exercise00.md  ex00.cabal  stack.yaml
Year3/CS3016/Assignment1/src/: Ex00.hs  Main.hs
Year3/CS3016/Assignment1/test/: Spec.hs
Year3/CS3016/Assignment3/: Exercise02.md  ex02.cabal
Year3/CS3016/Assignment3/src/: Ex02.hs  Main.hs
Year3/CS3016/Assignment3/test/: Spec.hs
Year3/CS3021/: Readme.md
Year3/CS3031/: readme.md
Year3/CS3071/: Readme.md
Year4/: Readme.md
(+443 files in other folders)
