name:                ex02
version:             0.1.0.0
synopsis:            CS3016 Exercise Two
license:             BSD3
license-file:        LICENSE
author:              Andrew Butterfield
maintainer:          Andrew.Butterfield@scss.tcd.ie
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:      base


  hs-source-dirs:     src/
  default-language:   Haskell2010

executable ex01
  main-is:            Main.hs
  build-depends:      base
  other-modules:    Ex02



  hs-source-dirs:     src/
  default-language:   Haskell2010

test-suite Main
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  x-uses-tf: true
  build-depends:  base,
                  HUnit,
                  test-framework,
                  test-framework-hunit


  hs-source-dirs: test, src
  default-language: Haskell2010
  other-modules:  Ex02
